  change for extensions that implement the interface.
* Callbacks registered by MessageCacheFetchOverrides handlers will now be
  called with only two parameters. The $language and $useDB parameter will not
  be passed.
* The following formerly-public properties of OutputPage, deprecated with
  warnings in 1.38, have been removed:
   - OutputPage::$mNoGallery
   - OutputPage::$mRevisionTimestamp
* The method signatures of EmailNotification::notifyOnPageChange()
  and actuallyNotifyOnPageChange() have changed. These method are now
  marked as @internal and must not be used by extensions.
* …

=== Deprecations in 1.44 ===

* Various static methods on ChangeTags, deprecated since 1.41, each now emit
  deprecation warnings. Use service access to the ChangeTagsStore instead:
  addTags(), defineTag(), deleteTagEverywhere(), getDisplayTableName(),
  getSoftwareTags(), getTags(), getTagsWithData(), listDefinedTags(),
  listExplicitlyDefinedTags(), listSoftwareActivatedTags(),
  listSoftwareDefinedTags(), makeTagSummarySubquery(), modifyDisplayQuery(),
  purgeTagCacheAll(), tagUsageStatistics(), and updateTags().
* (T166010) All PHP code in MediaWiki is slowly being moved to be in a class
  namespace as appropriate, so that we can use PSR-4 auto-loading, which will
  speed up general code loading of MediaWiki. The old global namespace class
  names are being left behind as deprecated aliases.

  In this release of MediaWiki, XXX classes now have a namespace and XXX do
  not yet (XXX% done, up from 81% in MediaWiki 1.43.0). The following have newly
  been moved:
  - MediaWiki\Actions:
    - Action
    - CreditsAction
    - DeleteAction
    - EditAction
    - FormAction
    - FormlessAction
    - HistoryAction
    - InfoAction
    - MarkpatrolledAction
    - McrRestoreAction
    - McrUndoAction
    - ProtectAction
    - PurgeAction
    - RawAction
    - RenderAction
    - RevertAction
    - RollbackAction
    - SubmitAction
    - UnprotectAction
    - UnwatchAction